<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
    android:weightSum="1">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_marginRight="5dp"/>

        <TextView
                android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/label_state"
                android:layout_marginRight="5dp"/>
        <TextView
                android:id="@+id/connection_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"/>
    </LinearLayout>

    <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:groupIndicator="@null"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
        android:paddingStart="5dp"
        android:layout_height="200dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/label_heartrate"
                android:layout_marginRight="5dp"/>
        <TextView
                android:id="@+id/heartrate_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/no_data"
                android:minLines="1"/>
     </LinearLayout>

    <TextView
        android:text="Stress Level: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAlignment="textStart"
        android:layout_marginStart="5dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stress_level"
        android:layout_marginStart="5dp" />

    <TextView
        android:text="Stressed?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/stress_breathing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stress_breathing"
        android:layout_marginStart="5dp" />

    <TextView
        android:text="@string/stress_walk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stress_walk"
        android:layout_marginStart="5dp" />

    <TextView
        android:text="Try some calming music."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stress_relief"
        android:layout_marginStart="5dp" />

</LinearLayout>